--- a/CLIP_tutorial.ipynb
+++ b/CLIP_tutorial.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/zichaozeng/AI-2024_Multimodal_Large_Language_Model/blob/main/CLIP_tutorial.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "e-Bayakvs3y0"
    },
