--- a/GPT_tutorial.ipynb
+++ b/GPT_tutorial.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -252,6 +252,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# img_path = ''\n",
+    "# raw_image = Image.open(img_path.raw).convert('RGB')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "eqY2bt5QTr6O"
@@ -277,7 +287,7 @@
    },
    "outputs": [],
    "source": [
-    "openai_api_key = {openai_api_key}"
+    "openai_api_key = \"your_own_api_key\""
    ]
   },
   {
@@ -357,6 +367,15 @@
     "    ],\n",
     "    max_tokens=600,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response"
    ]
   },
   {
